﻿IMPROVEMENTS / FIXES
- General:
	- Russian localisation thanks to user Akteon_.
- Weapons:
	- Add a stagger option to barrage mode that fires barrages in bursts and adds variability to the reload times. Mostly only suitable for slow-firing ship guns.

v1.5.5.1
IMPROVEMENTS / FIXES
- Fix NRE in trajectory sim.
- Fix active vessel not firing under AI control.
- Fix firing of missiles via hotkey not respecting ripple/single setting.

v1.5.5.0
IMPROVEMENTS / FIXES
- General:
	- Add a --tsv option to the n-choose-k parsing script to output a TSV file instead of a CSV file.
	- Tweaks to scroll-zoom prevention.
	- Exclude weapons from the bounds calculations as they sometimes give weird values (e.g., lasers when firing).
- UI:
	- Add an option in the UI settings for disabling scroll-zoom prevention when over BDA windows.
	- Add version watermark to Competition UI and Vessel Switcher window.
- AI / WM:
	- Fixes for Stationary surface vessel mode.
		- No longer panics, even if airborne (allows for floating/free-fall turrets).
		- Attitude control (using RCS and reaction wheels) is applied when an enemy is within the engagement range.
	- Add 'Target Damage' Target Priority setting.
	- Add keybindings for "Next Weapon", "Prev Weapon" and "Fire Missile" in the WM (keybindings for firing guns are on the weapons).
- Detectors
	- Some optimizations to the ECMJammer code.
	- Active jammers now appear on Radar Warning Receivers.
- Armor:
	- Fix stack overflow in ToggleScaleClamp for symmetric parts.
	- Further fixes for post-penetration bugs.
- Weapons:
	- Remove the extra delay from dropping the final countermeasure in a sequence.
	- Fix non-damaging lasers not scoring.
	- Tightened up firing angle when using subsystem targeting; AI will now fire when subsystem part is within angle, not entire vessel.
	- Fix missing NukeFX Flash.
	- Fix the targeting reticle placement at very short range.