@@ -699,6 +699,7 @@ Localization
         #LOC_BDArmory_AIWindow_PIDAutoTuningSpeed = A-T Speed
         #LOC_BDArmory_AIWindow_PIDAutoTuningAltitude = A-T Altitude
         #LOC_BDArmory_AIWindow_PIDAutoTuningFixedP = A-T Fixed P
+        #LOC_BDArmory_AIWindow_PIDAutoTuningFixedFields = A-T Fixed Fields
         #LOC_BDArmory_AIWindow_PIDAutoTuningClampMaximums = A-T Clamp Max
         #LOC_BDArmory_AIWindow_ControlLimits = Control
         #LOC_BDArmory_AIWindow_ABOverrideThreshold = Afterburner Override
